<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp"
    android:layout_marginTop="-30dp"

    android:background="@color/colorPrimaryDark"
    tools:context=".presenter.LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
                android:layout_width="220dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/Username"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColorHint="#000"
                android:layout_gravity="center"
                android:layout_marginTop="0dp" >

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputUsername"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:fontFamily="sans-serif-condensed"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/Email"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColorHint="#000"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:fontFamily="sans-serif-condensed"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/Password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColorHint="#000"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:fontFamily="sans-serif-condensed"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/confirmPassword"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColorHint="#000"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputConfirmPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonRegister"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:textColor="@color/colorText"
                android:background="@color/colorTextHint"
                android:text="@string/text_register" />

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/linkLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/text_member"
                android:textSize="16sp"
                android:textColor="@color/colorText" />


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>