<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".presenter.LoginActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
                android:layout_width="220dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/Username"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColorHint="#000"
                android:layout_gravity="center"
                android:layout_marginTop="0dp" >

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputUsername"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:inputType="text"
                    android:fontFamily="sans-serif-condensed"
                    android:maxLines="1"
                    android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/Password"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColorHint="#000"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/inputPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:fontFamily="sans-serif-condensed"
                    android:maxLines="1"
                    android:textColor="@color/colorText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
                android:id="@+id/buttonLogin"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:textColor="@color/colorText"
                android:background="@color/colorTextHint"
                android:text="@string/text_login" />

        <android.support.v7.widget.AppCompatTextView
                android:id="@+id/linkRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/text_not_member"
                android:textSize="16dp"
                android:textColor="@color/colorText" />


    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>