<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".MainActivity"
              android:background="@color/graylight"
              android:orientation="vertical">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp">
        <LinearLayout
                android:background="@drawable/gradiant"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_marginTop="30dp"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/gambar_kontak"
                    android:layout_gravity="center"/>
            <TextView
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Andika Bratadirja"
                    android:textColor="#fff"
                    android:textStyle="bold"
                    android:textSize="21sp"/>
        </LinearLayout>
        <android.support.v7.widget.CardView
                android:layout_width="330dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="245dp">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3">
                <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">

                    <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_ig"/>
                    <TextView
                            android:id="@+id/instagram"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/instagram"
                            android:paddingTop="10dp"
                            android:textStyle="bold"
                            android:textSize="15dp"/>

                </LinearLayout>
                <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                    <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_line"/>
                    <TextView
                            android:id="@+id/line"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/line"
                            android:paddingTop="10dp"
                            android:textStyle="bold"
                            android:textSize="15dp"/>

                </LinearLayout>
                <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                    <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_github"/>
                    <TextView
                            android:id="@+id/github"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/github"
                            android:paddingTop="10dp"
                            android:textStyle="bold"
                            android:textSize="15dp"/>

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">
        <LinearLayout
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_email"/>
            <TextView
                    android:id="@+id/gmail"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/gmail"/>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_telepon"/>
            <TextView
                    android:textStyle="bold"

                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="+62 813 8688 4122"/>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_facebook"/>
            <TextView
                    android:id="@+id/facebook"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:text="@string/facebook"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>